-----------
-- 2.4.7 --
-----------
* Backend:
	* chroot crash reports are cleaned while exiting chroot environment
	  Fixes #1011260
	* non blocking error is thrown upon resolv.conf copying failure
	  Fixes #1011191
	* README was updated with info about grub update and grub-probe
	  Fixes #956495
	* bug #997033 was fixed
	* bug #1008787 was fixed

-----------
-- 2.4.6 --
-----------

* Frontend:
	* Unity was added to the desktop manager choice
	  Fixes #946404

* Backend:
	* Languages list was updated to precise
	* A bug with /etc/resolv.con on precise was fixed
	  Fixes #946480
	* A bug with xubuntu-terminal was fixed
	  Fixes #892590
	* grub-probe now is deactivated during chroot processes
	  Fixes #956495
* Package:
	* Added 64x64px icon
	  Fixes #970827

-----------
-- 2.4.5 --
-----------

* Frontend:
	* new languages (zh-hans/zh-hant) are now correctly handled.
	  Fixes #770810
	* hybrid image generation support was added to uck-gui (#830146)
	* oneiric language packs support was added
* Backend:
	* /etc/fstab is not mandatory in the squashfs file system (#808506)
	* /var/run is now a symbolic link to /run (#812418)
	* Oneiric alternate support was added (#842487)
	* mkisofs calls were replaced with genisoimage (#836350)
	* isohybrid support was added (uck-remaster-pack-iso -h) (#830146)
	* manifest diff now checks if manifest files really exist
	* lxterminal support was added (#865295)
	* mksquashfs now uses XZ (lzma) compression if available
	  (squashfs-tool => 4.1 and guest kernel => 2.6.30)
	  (#654234)
	* gfxboot-theme-ubuntu download method was rewritten
	  (question #157847)
	* firefox locale auto-remove workaround was added (#886838)
* Package:
	* suggestion for syslinux (isohybrid) installation was added

-----------
-- 2.4.4 --
-----------

* Frontend:
	* Fixed usage message in uck-remaster to match the parameter handling
	  that was already implemented.
	* Start message now contains output of uname and lsb_release. This